--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="fa" dir="rtl">
     <head>
+        <base href="/ashpaz-bashi/" />
+
         <meta charset="UTF-8" />
         <meta
             name="viewport"
