--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="fa" dir="rtl">
     <head>
-        <base href="/ashpaz-bashi/" />
-
         <meta charset="UTF-8" />
         <meta
             name="viewport"
@@ -12,10 +10,10 @@
 
         <title>آشپزباشی!</title>
 
-        <link rel="stylesheet" href="/styles/global.css" />
-        <link rel="stylesheet" href="/styles/index.css" />
+        <link rel="stylesheet" href="./styles/global.css" />
+        <link rel="stylesheet" href="./styles/index.css" />
 
-        <script src="/scripts/index.js" defer></script>
+        <script src="./scripts/index.js" defer></script>
     </head>
     <body>
         <header>
@@ -41,31 +39,31 @@
 
             <ul class="filters">
                 <li class="active">
-                    <img src="/assets/images/filters/all.jpg" alt="" />
+                    <img src="./assets/images/filters/all.jpg" alt="" />
                     <div class="text">همه</div>
                 </li>
                 <li>
-                    <img src="/assets/images/filters/iranian.jpg" alt="" />
+                    <img src="./assets/images/filters/iranian.jpg" alt="" />
                     <div class="text">ایرانی</div>
                 </li>
                 <li>
-                    <img src="/assets/images/filters/soup.jpg" alt="" />
+                    <img src="./assets/images/filters/soup.jpg" alt="" />
                     <div class="text">سوپ و آش</div>
                 </li>
                 <li>
-                    <img src="/assets/images/filters/italian.jpg" alt="" />
+                    <img src="./assets/images/filters/italian.jpg" alt="" />
                     <div class="text">ایتالیایی</div>
                 </li>
                 <li>
-                    <img src="/assets/images/filters/fast-food.jpg" alt="" />
+                    <img src="./assets/images/filters/fast-food.jpg" alt="" />
                     <div class="text">فست فود</div>
                 </li>
                 <li>
-                    <img src="/assets/images/filters/pizza.jpg" alt="" />
+                    <img src="./assets/images/filters/pizza.jpg" alt="" />
                     <div class="text">پیتزا</div>
                 </li>
                 <li>
-                    <img src="/assets/images/filters/cake.jpg" alt="" />
+                    <img src="./assets/images/filters/cake.jpg" alt="" />
                     <div class="text">کیک و شیرینی</div>
                 </li>
             </ul>
