[ADD] recipe page

--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
         <link rel="stylesheet" href="./styles/global.css" />
         <link rel="stylesheet" href="./styles/index.css" />
 
+        <script src="./scripts/global.js" defer></script>
         <script src="./scripts/index.js" defer></script>
     </head>
     <body>
         <header>
-            <div class="logo">آشپزباشی!</div>
+            <a class="logo" href="./index.html">آشپزباشی!</a>
             <div class="hero">
                 <h1>نمیدونی چه غذایی درست کنی؟</h1>
                 <p>
